Site Settings Desktop: Fix NOTREACHED when group name is unregistered.

BUG=617724

Review-Url: https://codereview.chromium.org/2048633002
Cr-Commit-Position: refs/heads/master@{#398322}

Former-commit-id: 3e7d918eb1ac8c7e51cfe51c3a2039d4bb09914d